--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ background: black;
 <body>
 <div class="navbar">
 <ul><h3>
-<li><a href="index.html">Data Visualization</a></li>
+<li><a href="version2.httml">Data Visualization</a></li>
 <li><a href="gltf.html">glTF Viewer</a></li>
 <li><a href="aboutus.html">About us</a></li>
 </h3>
